[Bug #20900] Warn deprecated constant when removing